clang-ir/tests/snapshots/snapshot_fixtures__stdlib__math__trunc.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/stdlib/math/trunc.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%f\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca double, "x", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 2.900000e+00 : double
        store %3, %1, align 8
        %4 = get_global @printf : (s8i*, ...) -> s32i*
        %5 = get_global @.str : s8i[4]*
        %6 = cast(array_to_ptrdecay) %5 : s8i*
        %7 = load %1 : double, align 8
        trunc
        %9 = call @printf(%6, %8) : s32i [all]
        %10 = const 0 : s32i
        store %10, %0
        %11 = load %0 : s32i
        return %11
}
